@@ -7,7 +7,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="classpath" location="javaforce.jar"/>
-  <property name="version" value="0.0.1"/>
+  <property name="version" value="0.1"/>
 
   <import file="../../base.xml"/>
 
@@ -58,18 +58,22 @@
     <copy file="${app}.desktop" todir="/usr/share/applications"/>
     <copy file="${app}.png" todir="/usr/share/icons/hicolor/48x48/apps"/>
     <copy file="${app}.html" todir="/usr/share/jhelp"/>
+    <!-- systemd in /lib for debian and fedora(linked) -->
+    <mkdir dir="/lib/systemd/system/"/>
+    <copy file="jfcontrols.service" todir="/lib/systemd/system"/>
   </target>
 
   <target name="release-bin" description="create release zip file">
-    <zip destfile="${app}-${version}.zip">
+    <zip destfile="${app}-${version}-bin.zip">
       <fileset dir=".">
         <include name="*.jar"/>
         <include name="*.txt"/>
+        <include name="*.dll"/>
         <include name="run.bat"/>
       </fileset>
       <fileset dir="../.." includes="license.txt"/>
     </zip>
-    <move file="${app}-${version}.zip" todir="${home}/release"/>
+    <move file="${app}-${version}-bin.zip" todir="${home}/release"/>
   </target>
 
   <target name="release-src" depends="" description="create release zip file">
@@ -78,8 +82,9 @@
         <include name="jf/license.txt"/>
         <include name="jf/base.*"/>
         <include name="jf/stubs/*"/>
-        <include name="jf/projects/${app}/src/*.java"/>
-        <include name="jf/projects/${app}/src/*.form"/>
+        <include name="jf/projects/${app}/src/**/*.java"/>
+        <include name="jf/projects/${app}/src/**/*.form"/>
+        <include name="jf/projects/${app}/src/**/*.png"/>
         <include name="jf/projects/${app}/*.txt"/>
         <include name="jf/projects/${app}/*.xml"/>
         <include name="jf/projects/${app}/*.png"/>
@@ -88,6 +93,7 @@
         <include name="jf/projects/${app}/run.bat"/>
         <include name="jf/projects/${app}/nbproject/*.xml"/>
         <include name="jf/jars/javaforce.jar"/>
+        <include name="jf/jars/derby.jar"/>
       </fileset>
     </zip>
     <move file="${app}-src-${version}.zip" todir="${home}/release"/>
