@@ -1,5 +1,9 @@
 What's new...
 
+Jul 7/2017 : JF 16.0.0 released
+  - new : jfControls
+    - a software PLC with ladder logic and panels
+
 Jul 4/2017 : JF 15.7.0 released
   - jPhoneLite/1.12
     - fixed help button
